partman-base (75) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Clarify partman/confirm to indicate that if you say no you can make
    further changes manually (closes: #329405).

  [ Sven Luther ]
  * Adapted to chrp_rs6k -> chrp_ibm transition.

 -- Sven Luther <luther@debian.org>  Mon, 14 Nov 2005 14:03:17 +0000

partman-base (74) unstable; urgency=low

  * ped_disk_get_max_partition_geometry returns NULL if the partition's
    current geometry is invalid in some way. Deal with this in
    GET_RESIZE_RANGE and GET_VIRTUAL_RESIZE_RANGE by just claiming that the
    partition cannot be enlarged (closes: Ubuntu #13250).
  * Remove Standards-Version:, not applicable to udebs.

 -- Colin Watson <cjwatson@debian.org>  Thu, 27 Oct 2005 14:35:43 +0100

partman-base (73) unstable; urgency=low

  [ Joey Hess ]
  * Removed all the fancy utf-8 symbols that noone understood (the
    tamagotchi, black smiley, white smiley, and lightning bolt).
    Just use the same letter abbrevs used in non-utf mode.
    Closes: #285350

  [ Colin Watson ]
  * Stop USES_EXTENDED command from segfaulting if called on a device
    without a partition table (e.g. a DVD-RW).
  * Use 'rm -f' rather than more awkward test-then-remove constructions.
  * Add stop_parted_server and restart_partman functions to reduce
    duplication elsewhere.

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Bengali (bn.po) by Baishampayan Ghose
  * German (de.po) by Jens Seidel
  * Korean (ko.po) by Changwoo Ryu
  * Macedonian (mk.po) by Georgi Stanojevski
  * Norwegian Nynorsk (nn.po)
  * Romanian (ro.po) by Eddy Petrisor
  * Swedish (sv.po) by Daniel Nylander
  * Turkish (tr.po) by Recai Oktaş

 -- Colin Watson <cjwatson@debian.org>  Fri, 21 Oct 2005 14:29:52 +0100

partman-base (72) unstable; urgency=low

  [ Updated translations ]
  * Greek, Modern (1453-) (el.po) by Greek Translation Team
  * Galician (gl.po) by Jacobo Tarrio
  * Kurdish (ku.po) by Erdal Ronahi