@@ -3,6 +3,7 @@ partman-base (75) UNRELEASED; urgency=low
   [ Colin Watson ]
   * Clarify partman/confirm to indicate that if you say no you can make
     further changes manually (closes: #329405).
+  * Exclude CD/DVD drives from the output of parted_devices.
 
   [ Sven Luther ]
   * Adapted to chrp_rs6k -> chrp_ibm transition.
